Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note


10-Aug-2010 Andrew Eddie
 # Fixed issue [#21648] No e-mail sent to newly created users (via back-end) (Mārcis Kaksis).

-------------------- 1.6.0 Beta7 Release [09-Aug-2010] ------------------

09-Aug-2010 Ian MacLennan
 # [#20289] FTP Server: Do not save credentials through the Web Interface
 # [#21476] Not using correct Primary Key while saving
 # [#21579] E_STRICT error in JCacheCallback due to modRelatedItemsHelper::getList() being non-static
 # [#21597] New Menu Item - using filter in modal
 # [#21616] Page scrolls to top when click on Contact Slider
 # [#21643] Login screen with google chrome 5.0.375 fields misaligned
 # [#21710] Root user notice only on username
 # [#21719] Create and delete action in plugins permissions configuration
 # [#21726] Possible mispelling of "extension" in assorted helper files
 # [#21751] Missing JErrors in com_contact
 # [#21754] JOPTION_REPORTED left overs

08-Aug-2010 Jean-Marie Simonet
 # [#21387] Weird Display Issue Administrator Template In Safari 4 & 5

08-Aug-2010 Ron Severdia
 # Cleaned up Atomic template (ready to go once sample data is committed).
 
07-Aug-2010 Jean-Marie Simonet
 # [#21750] Default module position
 # [#21744] Implementing drill-down options for weblinks and newsfeeds categorieS menu items
 # [#21749] IE7 patches to the Options modal. Thanks Andrea.
 # [#21628] unpublish core extensions. Thanks Mark
 
06-Aug-2010 Ian MacLennan
 # [#21598] Unable to logout ( front end ) if cache enabled
 # [#21630] Dropdown order in plug in manager
 # [#21632] Dropdown order in article manager
 # [#21633] Dropdown order in category manager
 # [#21634] Dropdown order in menu manager
 # [#21637] Dropdown order in module manager